Get to the 30ish minute mark

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TutorialsV2",
+  "name": "tutorialsv2",
   "version": "1.0.0",
   "description": "My new Git repo for all my learnings.",
   "main": "index.js",
@@ -33,6 +33,14 @@
     "@mikro-orm/migrations": "^4.4.4",
     "@mikro-orm/postgresql": "^4.4.4",
     "nodemon": "^2.0.7",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "ts-node": "^9.1.1"
+  },
+  "mikro-orm": {
+    "useTsNode": true,
+    "configPaths": [
+      "./src/mikro-orm.config.ts",
+      "./dist/mikro-orm.config.js"
+    ]
   }
 }
