--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/KaiDevrim/TutorialsV2#readme",
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@types/node": "^14.14.31",
     "typescript": "^4.2.2"
   },
@@ -32,9 +33,13 @@
     "@mikro-orm/core": "^4.4.4",
     "@mikro-orm/migrations": "^4.4.4",
     "@mikro-orm/postgresql": "^4.4.4",
+    "apollo-server-express": "^2.21.0",
+    "express": "^4.17.1",
+    "graphql": "^15.5.0",
     "nodemon": "^2.0.7",
     "pg": "^8.5.1",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "type-graphql": "^1.1.1"
   },
   "mikro-orm": {
     "useTsNode": true,
